OrderTask adding spring Security 6 all configuration

--- a/shopping/src/main/resources/messages.properties
+++ b/shopping/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 PRODUCT.NOT_FOUND =product not found
-Order.PRODUCT.UNIQUENESS=Order Products should be Unique
+Order.PRODUCT_UNIQUENESS=Order Products should be Unique
+USER.NOT_FOUND= User not found
